--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-figure out what causes the issue, that message broker clients don't seem to work after restarting them
+find exact reason for the ram spikes (something todo w restarting)
