--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-find exact reason for the ram spikes (something todo w restarting)
+find exact reason for the ram spikes (something todo w restarting) - DONE - reason was, i never closed the connection when the client stopped...
