--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
 find exact reason for the ram spikes (something todo w restarting) - DONE - reason was, i never closed the connection when the client stopped...
 
-there is some other or related issue that causes ram spikes more rarely - clueless currently. multiple seemingly unrelated actions can cause the issue (e.g. also repeated reloads of dashboard or app-frontend) - issue seems to be only reproducable when there is a broker server present
+there is some other or related issue that causes ram spikes more rarely - clueless currently. multiple seemingly unrelated actions can cause the issue (e.g. also repeated reloads of dashboard or app-frontend)
