--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
 find exact reason for the ram spikes (something todo w restarting) - DONE - reason was, i never closed the connection when the client stopped...
 
-there is some other or related issue that causes ram spikes more rarely - clueless currently. multiple seemingly unrelated actions can cause the issue (e.g. also repeated reloads of dashboard or app-frontend)
+there is some other or related issue that causes ram spikes more rarely - I will ignore this issue for now since this also occurs on the other branch/ without any broker structs and for seemingly unrelated reasons. maybe something to do with go.
