--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-fix the dashboard urls of clients
+fix the dashboard urls of clients - currently only routes that try to serve a directory with path "/" are working. idk why yet
