--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,5 @@
 re-create "nodes" consisting of messageBrokerClient, httpServer, websocketServer and dashboardClient
+
+integrate "password" in some form into the dashboard#
+
+add access control commands to broker structs
