--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,6 @@ integrate "password" in some form into the dashboard#
 add access control commands to broker structs
 
 add command scheduling in some form (to the dashboard)
+
+add ChannelConnection and channelListener as more performant alternative for systems within a single process
+consider adding PipeConnection and PipeListener as more performant alternative for systems within a single device
