--- a/todo.txt
+++ b/todo.txt
@@ -9,5 +9,5 @@ add command scheduling in some form (to the dashboard)
 add ChannelConnection and channelListener as more performant alternative for systems within a single process
 consider adding PipeConnection and PipeListener as more performant alternative for systems within a single device
 
-add some functionality that supports running systemge-apps in the background while allowing to execute commands through the terminal (no concrete plan yet) (i think this can actually be done already with the golang flag package) (add a flag to start, execute this as background process and add other flags that may be executed as non-background processes)
+add some functionality that supports running systemge-apps in the background while allowing to execute commands through the terminal (no concrete plan yet) (i think this can actually be done already with the golang flag package)
 
