--- a/todo.txt
+++ b/todo.txt
@@ -22,4 +22,6 @@ add "syncResponsesSent" metrics to connection
 
 make websocketServer stop-operation cleaner
 
+update oauth2server (add dashboard client etc.)
+
 allow some kind of grouping of metrics on dashboards (no concrete ideas yet, probably further in the future)
