--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,7 @@ add heartbeat mechanic to tcpConnections in order to not rely on sending/receivi
 
 implement dashboard commands and metrics
 add mechanism for dashboard to change commands during runtime
+fix dashboard command-response text (the text can be cut off due to css)
 
 add mechanism to systemgeServer that allows blacklist/whitelist entries to persist during restarts
 
