--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 add heartbeat mechanic to tcpConnections in order to not rely on sending/receiving to detect a closed connection
 
-implement dashboard commands and metrics
+implement dashboard commands
 fix dashboard command-response text (the text can be cut off due to css)
 
 add mechanism to systemgeServer that allows blacklist/whitelist entries to persist during restarts
