--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
+integrate "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
+
 fix rare race condition on systemgeServer (waitGroup)
 
 improve logging (especially systemge and broker packages)
@@ -11,8 +13,6 @@ update oauth2server (add dashboard client etc.)
 update readme
 
 re-create "nodes" consisting of messageBrokerClient, httpServer, websocketServer and dashboardClient
-
-integrate "password" in some form into the dashboard
 
 add ChannelConnection and channelListener as more performant alternative for systems within a single process
 consider adding PipeConnection and PipeListener as more performant alternative for systems within a single device
