--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
+build specialized "dashboards" for various packages. for example to add topics to broker server/resolver through a web mask and things like that
+
 integrate "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
 improve logging (especially systemge and broker packages)
