--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-build specialized "dashboards" for various packages. for example to add topics to broker server/resolver through a web mask and things like that
+build specialized "dashboards" for various packages. for example to add topics to broker server/resolver through a web mask, manage clients on sytemge server, etc
 
 integrate "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
