--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 build specialized "dashboards" for various packages. for example to add topics to broker server/resolver through a web mask, manage clients on sytemge server, etc
+-allow the systemgeServerDashboard and systemgeClientDashboard the ability to manage all its connections like through the systemgeConnectionDashboard
 
 integrate "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
