--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,7 @@ build specialized "dashboards" for various packages. for example to add topics t
 -httpServerDashboard
 -oauth2ServerDashboard
 -dashboardClientDashboardClient
+-dashboardClientDashboardClientDashboardClient
 
 integrate "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
