--- a/todo.txt
+++ b/todo.txt
@@ -30,3 +30,5 @@ consider adding PipeConnection and PipeListener as more performant alternative f
 allow some kind of grouping of metrics on dashboards (no concrete ideas yet, probably further in the future)
 
 write something that takes in configs and create an executable, that can be used to easily perform systemge-operations through the (os-)command line (such as sending messages) i.e. through the provided args
+
+possibly some sort of shared memory api through go's syscall-shared memory and synchronization funcs
