--- a/todo.txt
+++ b/todo.txt
@@ -31,4 +31,4 @@ allow some kind of grouping of metrics on dashboards (no concrete ideas yet, pro
 
 write something that takes in configs and create an executable, that can be used to easily perform systemge-operations through the (os-)command line (such as sending messages) i.e. through the provided args
 
-possibly create a way to access systemge-operations (i.e. operations from a struct like systemgeServer) through os-level shared memory and synchronization
+possibly create a way to access systemge-operations (i.e. operations from a struct like systemgeServer) through os-level shared memory and synchronization (syscall package)
