--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,8 @@ build specialized "dashboards" for various packages. for example to add topics t
 -httpServerDashboard
 -oauth2ServerDashboard
 
+crate more/smaller metric groups for systemge-structs
+
 integrate "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
 improve logging (especially systemge and broker packages)
@@ -31,4 +33,4 @@ allow some kind of grouping of metrics on dashboards (no concrete ideas yet, pro
 
 write something that takes in configs and create an executable, that can be used to easily perform systemge-operations through the (os-)command line (such as sending messages) i.e. through the provided args
 
-possibly create a way to access systemge-operations (i.e. operations from a struct like systemgeServer) through os-level shared memory and synchronization (syscall package)
+possibly create a way to access systemge-operations (i.e. operations from a structs like systemgeServer) through os-level shared memory and synchronization (syscall package)
