--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,7 @@ build specialized "dashboards" for various packages. for example to add topics t
 create more/smaller metric types for systemge-structs
 
 implement manual metrics update in some form (especially in regards to ranges of average values (e.g. bytes sent not together with messages sent))
-implement different type of data visualizationis
+implement different types of data visualizations
 
 implement "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
