--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@ create more/smaller metric types for systemge-structs
 implement manual metrics update in some form (especially in regards to ranges of average values (e.g. bytes sent not together with messages sent))
 implement different types of data visualizations
 
+implement optional automated reconnect attempts on brokerClient for subscribed topics (and delay between attempts)
+
 implement "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
 improve logging (especially systemge and broker packages)
