--- a/todo.txt
+++ b/todo.txt
@@ -16,6 +16,7 @@ implement manual metrics update in some form (especially in regards to ranges of
 implement different types of data visualizations
 
 implement optional automated reconnect attempts on brokerClient for subscribed topics (and delay between attempts)
+(figure out whether i can change systemgeClient to be able to be used for this purpose)
 
 implement "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
 
