--- a/todo.txt
+++ b/todo.txt
@@ -38,3 +38,5 @@ allow some kind of grouping of metrics on dashboards (no concrete ideas yet, pro
 write something that takes in configs and create an executable, that can be used to easily perform systemge-operations through the (os-)command line (such as sending messages) i.e. through the provided args
 
 possibly create a way to access systemge-operations (i.e. operations from a structs like systemgeServer) through os-level shared memory and synchronization (syscall package)
+
+support the option for custom dashboard clients and frontend pages (react components)
