--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,7 @@ build specialized "dashboards" for various packages. for example to add topics t
 implement manual metrics update in some form (especially in regards to ranges of average values (e.g. bytes sent not together with messages sent))
 create more/smaller metric types for systemge-structs
 implement different types of data visualizations
-create some sort of drop down menu to view selected metric-types
+create some sort of menu to view selected metric-types
 rework brokerClient - connections - metrics
 
 implement "password" in some form into the dashboard (for the beginning as access control as an alternative to whitelist)
