--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,7 @@ rework/replace sync messages with a more general approach
 -> replace "syncTokens" with "attribute"
 -> per systemgeConnection, per attribute, a list of message handlers can be defined that are executed in order
 -> api for sync messages will stay more or less unchanged for sending. responses will be a bit different since there will only be one type of message handlers
+(still thinking about a convinient way to determine whether a message expects a reply /which attribute or whether thats neccessary)
 
 make websocketServer stop-operation cleaner
 
