--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,7 @@ implement different types of data visualizations
 create some sort of menu to view selected metrics-types
 
 extend syncToken functionality so that you register/manage syncTokens/responses more independetly of sync requests 
-sync request/responses will stay virtually unchanged
+sync request/responses will stay virtually unchanged (the connection.SyncResponse() method will change slightly to work based on token instead based on message)
 in addition it will be possible to register syncTokens on receiver side, and gather manual sync responses (connection.SyncResponse())
 
 make websocketServer stop-operation cleaner
