--- a/todo.txt
+++ b/todo.txt
@@ -18,6 +18,7 @@ extend syncToken functionality so that you can register/manage syncTokens/respon
 sync request/responses api will stay virtually unchanged (the connection.SyncResponse() method will change slightly to work based on token instead based on message)
 in addition it will be possible to register syncTokens on receiver side, and gather manual sync responses (connection.SyncResponse())
 with the effect, that one connection can send multiple responses for one sync token (while leaving everything else as easy to use as it is now)
+Add SyncResponses struct that is returned instead of a message channel. the struct can be used to receive response messages or cancel the token.
 
 make websocketServer stop-operation cleaner
 
