--- a/todo.txt
+++ b/todo.txt
@@ -19,6 +19,7 @@ sync request/responses api will stay virtually unchanged (the connection.SyncRes
 in addition it will be possible to register syncTokens on receiver side, and gather manual sync responses (connection.SyncResponse())
 with the effect, that one connection can send multiple responses for one sync token (while leaving everything else as easy to use as it is now)
 Add SyncResponses struct that is returned instead of a message channel. the struct can be used to receive response messages or cancel the token.
+change syncRequests/tokens to either stay alive until a certain time passed, or a certain number of responses was received (or was manually cancelled)
 
 make websocketServer stop-operation cleaner
 
