--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,8 @@ build specialized "dashboards" for various packages. for example to add topics t
 -httpServerDashboard
 -oauth2ServerDashboard
 
+add close button for dashboard server as well as all clients
+
 implement manual metrics update in some form (especially in regards to ranges of average values (e.g. bytes sent not together with messages sent))
 implement different types of data visualizations
 create some sort of menu to view selected metrics-types
