--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,7 @@ build specialized "dashboards" for various packages. for example to add topics t
 -oauth2ServerDashboard
 
 todo(frontend)
+add timestamps to response messages
 add status for non-landing pages
 make content less ugly
 refactor response messages
