--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,8 @@ build specialized "dashboards" for various packages. for example to add topics t
 -oauth2ServerDashboard
 
 todo(frontend)
+add config option for response message lifetime (0 infite)
+add button to remove response messages manually 
 add timestamps to response messages
 add status for non-landing pages
 make content less ugly
