--- a/todo.txt
+++ b/todo.txt
@@ -25,6 +25,8 @@ rework dashboard design (menu bar, iphone support etc)
 implement different types of data visualizations
 implement manual metrics update in some form (especially in regards to ranges of average values (e.g. bytes sent not together with messages sent))
 
+add http calls for dashboard commands somehow
+
 maybe other types of csv files as well (e.g. connects/disconnects, message timestamps, topics and senders?)
 
 refactor brokerResolver to use singleRequestServer
