--- a/todo.txt
+++ b/todo.txt
@@ -27,6 +27,10 @@ implement manual metrics update in some form (especially in regards to ranges of
 
 add http calls for dashboard commands somehow
 
+display error responses somehow on dashboard
+propagate response message cache on connect
+create a separate response message cache for every page
+
 add dashboard chat/notes
 
 hide password input on dashboard
