--- a/todo.txt
+++ b/todo.txt
@@ -29,6 +29,7 @@ add http calls for dashboard commands somehow
 
 display error responses somehow on dashboard
 propagate response message cache on connect
+more expressive response messages (so it becomes clear what the underlying request/command was)
 
 add dashboard chat/notes
 
