--- a/todo.txt
+++ b/todo.txt
@@ -30,7 +30,7 @@ add http calls for dashboard commands somehow
 
 add dashboard chat/notes
 
-hide password input on dashboard (will create a separate password-window and remove the usage of prompt window)
+hide password input on dashboard (will create a separate password-page and remove the usage of prompt window)
 
 maybe other types of csv files as well (e.g. connects/disconnects, message timestamps, topics and senders?)
 
