--- a/todo.txt
+++ b/todo.txt
@@ -17,7 +17,7 @@ add delete button for response messages and add more infos (page, timestamp)
 add status for non-landing pages
 make content less ugly (style for input elements, status, metrics)
 
-hide password input on dashboard (will create a separate password-page and remove the usage of prompt window)
+hide password input on dashboard (will create a custom password-mask and remove the usage of prompt-popup)
 
 create some sort of menu to view selected metrics-types
 option to create csv file based on update routine and response messages
