--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,9 @@ build specialized "dashboards" for various packages. for example to add topics t
 -httpServerDashboard
 -oauth2ServerDashboard
 
+consider/support config changes at runtime.
+right now this is not officially supported and works for some fields, and not for others.
+
 display error responses somehow on dashboard
 hide password input on dashboard (will create a custom password-mask and remove the usage of prompt-popup)
 add status for non-landing pages
