--- a/todo.txt
+++ b/todo.txt
@@ -14,7 +14,7 @@ build specialized "dashboards" for various packages. for example to add topics t
 -oauth2ServerDashboard
 
 consider/support config changes at runtime.
-right now this is not officially supported and works for some fields, and not for others.
+right now this is not officially supported and works for some fields, but not for others.
 
 display error responses somehow on dashboard
 hide password input on dashboard (will create a custom password-mask and remove the usage of prompt-popup)
