--- a/todo.txt
+++ b/todo.txt
@@ -17,6 +17,7 @@ consider/support config changes at runtime.
 right now this is not officially supported and works for some fields, but not for others.
 
 split up websocketServer into listener, server and connection like systemge
+add sync messaging system between websocketServer and its clients
 
 display error responses somehow on dashboard
 hide password input on dashboard (will create a custom password-mask and remove the usage of prompt-popup)
