--- a/todo.txt
+++ b/todo.txt
@@ -21,6 +21,8 @@ add sync messaging system between websocketServer and its clients
 
 add authentication/key mechanism for listeners
 
+create timeout for message handlers (abbandon goroutine after x ms and continue)
+
 display error responses somehow on dashboard
 hide password input on dashboard (will create a custom password-mask and remove the usage of prompt-popup)
 add status for non-landing pages
