--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 create a bunch of wrapper functions with events (commands, httpRequests etc)
 make sure http server stop only returns after all its http requests finished!!
+only create events where some sort of state is altered
 
 build specialized "dashboards" for various packages. for example to add topics to broker server/resolver through a web mask, manage clients on sytemge server, etc
 -allow the systemgeServerDashboard and systemgeClientDashboard the ability to manage all its connections like through the systemgeConnectionDashboard
