--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 create a bunch of wrapper functions with events (commands, httpRequests etc)
 make sure http server stop only returns after all its http requests finished!!
 only create events where some sort of state is altered (or error occurs)
+go once again over events/circumstances/context in general and search for patterns
 
 build specialized "dashboards" for various packages. for example to add topics to broker server/resolver through a web mask, manage clients on sytemge server, etc
 -allow the systemgeServerDashboard and systemgeClientDashboard the ability to manage all its connections like through the systemgeConnectionDashboard
